# BasicStm32Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeLists.Baremetal.cmake  CMakeLists.Unittest.cmake  gcc-arm-none-eabi.cmake  gcc-native-linux.cmake
hal/: CMakeLists.txt  main.cpp
hal/cmsis/Device/ST/STM32H7xx/Source/Templates/: system_stm32h7xx_dualcore_boot_cm4_cm7.c  system_stm32h7xx_dualcore_bootcm4_cm7gated.c  system_stm32h7xx_dualcore_bootcm7_cm4gated.c  system_stm32h7xx_singlecore.c
hal/cmsis/Device/ST/STM32H7xx/include/: stm32h743xx.h  stm32h7xx.h
hal/system/: hal_init.c  hal_init.h  stm32h7xx_hal_conf.h  stm32h7xx_it.c  syscalls.c  sysmem.c  types.h
scripts/: build_target.sh  build_unittest.sh  clean_all.sh  cmake_init_target.sh  cmake_init_unittest.sh  colorcodes.sh  doxyfile  exec_unittests.sh
src/: main.cpp
src/utils/: CMakeLists.txt  ILogger.hpp  IpAddressV4.cpp  IpAddressV4.hpp  Logger.cpp  Logger.hpp
src/utils/gtest/: TestIpAddressV4.cxx
tests/: CMakeLists.txt  test_main.cpp
